--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<a name="links" href="google.com" class="links">Personal opinions</a>
 		<a name="links" href="google.com" class="links">Articles</a>
 		<a name="links" href="google.com" class="links">recipes</a>
-		<a name="links" href="google.com" class="links">Cool websites</a>
+		<a name="links" href="cool_websites.html" class="links">Cool websites</a>
 		<hr>
 		</div>
 		<input type="button" id="dark_light_mode" value="Light Mode" onclick="dark_light_mode()">
