--- a/cool_websites.html
+++ b/cool_websites.html
@@ -28,7 +28,7 @@
 		<ol>
 		<li>
 		<h2>free code camp</h2>
-		<img src="free_code_camp.png" width="1000px">
+		<img src="free_code_camp.png" width="60%">
 		<p><a href="https://www.freecodecamp.org/">free code camp</a> is your free guide to improve your technical skills it has a lot of free courses and tutorials to help you
 		in your coding journey.</p>
 </body>
